--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-responsive-carousel": "^3.2.23",
-    "sonner": "^1.4.41"
+    "sonner": "^1.4.41",
+    "@fortawesome/fontawesome-free": "5.15.3",
+    "@popperjs/core": "2.9.1",
+    "@tailwindcss/forms": "0.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
